--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,23 @@ html {
 }
 
 .header {
-  border-bottom: solid 2px purple;
+  border-bottom: solid 2px plum;
   height: auto;
 }
 
+.additional-menu p {
+  color: plum;
+  padding-bottom: 0.7rem;
+}
+
 .test {
-  border: solid 10px purple;
+  border: solid 10px plum;
+}
+
+.logo {
+  width: auto;
+  height: 3rem;
+  margin: 0.2rem;
 }
 
 .search-form {
@@ -20,12 +31,12 @@ html {
 }
 
 .search-input {
-  border: solid 2px purple;
+  border: solid 2px plum;
   border-radius: 2rem;
 }
 
 .search-select {
-  border: 0px solid purple;
+  border: 0px solid plum;
   text-align: center;
   /*background-color: lighten($color, 40%);*/
   border-radius: 2rem;
@@ -33,7 +44,7 @@ html {
 }
 
 .nav-mar {
-  margin-top: 1rem;
+  margin-top: 0.7rem;
 }
 
 .header-menu a {
@@ -41,7 +52,7 @@ html {
   padding-right: 30px;
   margin-left: 30px;
   margin-right: 30px;
-  color: #5c005c;
+  color: #d486d4;
   font-size: 18px;
   font-weight: 600;
 }
@@ -51,19 +62,9 @@ html {
 }
 
 .search-button {
-  background-color: #9a009a;
+  background-color: #e4b3e4;
   border-radius: 1rem;
   color: white;
-}
-
-.additional-menu p {
-  color: purple;
-  padding-bottom: 2rem;
-}
-
-.logo {
-  width: auto;
-  height: 4rem;
 }
 
 main {
@@ -71,7 +72,7 @@ main {
 }
 
 .sub-title {
-  border-left: rgb(147, 118, 173) solid 2px;
+  border-left: rgb(17, 0, 146) solid 2px;
   padding-left: 1rem;
   margin-bottom: 1.5rem;
 }
@@ -88,7 +89,7 @@ main {
 }
 
 .login-main {
-  border: purple solid 3.5px;
+  border: plum solid 3.5px;
   border-radius: 2rem;
   padding: 6rem;
   height: 25rem;
@@ -107,40 +108,41 @@ main {
 
 .login-text {
   margin: 1rem;
+  padding-left: 1rem;
+  border-left: 3px solid plum;
 }
 
 .login-button {
-  background-color: rgb(231, 211, 248);
-  border: rgb(147, 118, 173) 1px solid;
-  color: rgb(147, 118, 173);
+  background-color: rgb(141, 139, 249);
+  border: rgb(17, 0, 146) 1px solid;
+  color: rgb(17, 0, 146);
   font-weight: 500;
 }
 
 .register-main {
-  border: purple solid 3.5px;
+  border: plum solid 3.5px;
   border-radius: 2rem;
   padding: 4rem;
-  height: 45rem;
-  width: 40rem;
+  height: auto;
+  width: 35rem;
   margin: 0rem;
   margin-top: -1.5rem;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin-left: 3rem;
 }
 
 .register-input {
-  margin-top: 1rem;
+  margin-top: 0.3rem;
 }
 
 .register-text {
-  margin: -1rem;
+  margin: -2rem;
   margin-bottom: 1rem;
+  font-size: 27px;
+  color: rgb(17, 0, 146);
 }
 
 .register-button {
-  margin-top: 3.5rem;
-  background-color: purple;
+  background-color: plum;
   border: none;
+  margin-top: 1.7rem;
 }/*# sourceMappingURL=style.css.map */
