--- a/css/style.scss
+++ b/css/style.scss
@@ -1,13 +1,20 @@
-$color: purple;
-$bright: rgb(231, 211, 248);
-$dark: rgb(147, 118, 173);
+$color:plum;
+// $bright: brightness($color, 50%);
+$bright: rgb(141, 139, 249);
+$dark: rgb(17, 0, 146);
+// $dark_: darken($color, 50%);
 html {
     font-size: 110%;
 }
-.header{
+.header {
     border-bottom: solid 2px $color;
     height: auto;
 }
+.additional-menu p{
+    color: $color; 
+    padding-bottom: 0.7rem;  
+}
+
 // .header-header{
 //     // display: flex;
 //     // align-items: center; 
@@ -15,7 +22,13 @@ html {
 .test{
     border: solid 10px $color;
 }
-
+.logo {
+    width: auto;
+    height: 3rem;
+    margin: 0.2rem;
+    // display: inline-block;
+    // vertical-align: middle;
+}
 .search-form{
     width: 576px;
     height: 88px;
@@ -23,12 +36,10 @@ html {
     display: flex;
     position: relative;
     height:auto;
-    
 }
 .search-input{
     border: solid 2px $color;
     border-radius: 2rem;
-    
 }
 .search-select{
     border: 0px solid $color;
@@ -38,7 +49,7 @@ html {
     color: gray;
 }
 .nav-mar{
-    margin-top: 1rem;
+    margin-top: 0.7rem;
 }
 .header-menu a{
     padding-left: 30px;
@@ -62,18 +73,6 @@ html {
 // .active {
 //     background-color: black;
 // }
-.additional-menu p{
-    color: $color; 
-    padding-bottom: 2rem;  
-}
-.logo{
-    
-    width: auto;
-    height: 4rem;
-    // display: inline-block;
-    // vertical-align: middle;
-}
-
 
 
 
@@ -95,10 +94,7 @@ main{
     margin:1rem;
     margin-top:1.7rem;
     margin-bottom:1.7rem;
-    
 }
-
-
 
 .login-main{
     border: $color solid 3.5px;
@@ -118,6 +114,8 @@ main{
 }
 .login-text{
     margin: 1rem;
+    padding-left: 1rem;
+    border-left: 3px solid $color;
 }
 .login-button{
     background-color: $bright;
@@ -131,27 +129,34 @@ main{
     border: $color solid 3.5px;
     border-radius: 2rem;
     padding:4rem;
-    height: 45rem;
-    width: 40rem;
+    height: auto;
+    width: 35rem;
     margin: 0rem;
     margin-top:-1.5rem;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin-left:3rem;
+    // align-items:center;
+    
+    // position: absolute;
+    // top: 50%;
+    // left: 50%;
+    // transform: translate(-50%, -50%);
 }
 .register-input{
-    margin-top: 1rem;
+    margin-top: 0.3rem;
 }
 .register-text{
-    margin: -1rem;
+    margin: -2rem;
     margin-bottom: 1rem;
+    font-size: 27px;
+    color: $dark;
 }
 .register-button{
-    margin-top: 3.5rem;
+    // margin-top: 1rem;
     background-color: $color;
     border:none;
+    margin-top: 1.7rem;
 }
+
 // display: flex;
 //   align-items: center;
 //   justify-content: center;
