게시글 페이지/작성 페이지 남음

--- a/css/style.css
+++ b/css/style.css
@@ -359,8 +359,9 @@ main .content {
   height: auto;
   position: fixed;
   top: 0;
-  width: 70vw;
+  width: 70rem;
   margin-left: 3rem;
+  background-color: white;
 }
 
 .search-form {
@@ -390,9 +391,19 @@ main .content {
   color: white;
 }
 
+.margin-top {
+  margin-top: 1rem;
+}
+
 .search-main {
   margin: 1rem;
   margin-top: 10rem;
+  margin-left: 3rem;
+  background-color: white;
+  padding: 3rem;
+  border-radius: 2rem;
+  padding-left: 15rem;
+  width: 65rem;
 }
 
 .sub-title {
@@ -402,12 +413,59 @@ main .content {
 }
 
 .main-box {
-  margin-bottom: 2rem;
   border-radius: 1.5rem;
+  padding-bottom: 0.4rem;
+  height: auto;
 }
 
 .book {
   margin: 1rem;
   margin-top: 1.7rem;
   margin-bottom: 1.7rem;
+}
+
+.content .settings {
+  margin: 0.4rem;
+  font-size: 1.1rem;
+}
+
+.no-padding {
+  padding-left: 0rem;
+}
+
+.flex {
+  display: flex;
+  align-items: flex-start;
+}
+
+.filter {
+  width: 18rem;
+  padding-left: 1.5rem;
+}
+
+.filter-item {
+  margin-top: 1.7rem;
+  margin-bottom: 0.4rem;
+}
+
+.filter-search-button {
+  margin-top: 0.5rem;
+  background-color: rgb(36, 0, 165);
+  color: white;
+}
+
+.filter {
+  background-color: rgb(211, 230, 255);
+  padding: 1rem;
+  margin: 1rem;
+  border-radius: 1rem;
+}
+
+.filter-item {
+  padding-left: 0.5rem;
+  border-left: 1px solid rgb(190, 133, 255);
+}
+
+.main-list {
+  margin-top: 3rem;
 }/*# sourceMappingURL=style.css.map */
