--- a/css/style.scss
+++ b/css/style.scss
@@ -311,7 +311,7 @@ main .content{
 }
 
 
-.flex-space-between{ // 미사용
+.flex-space-between{ 
     display: flex;
     justify-content: space-between;
 }
@@ -385,8 +385,9 @@ main .content{
     // background-color: white;
     position:fixed;
     top:0;
-    width: 70vw;
+    width: 70rem;
     margin-left: 3rem;
+    background-color: white;
 }
 
 
@@ -436,12 +437,21 @@ main .content{
 // }
 
 
+.margin-top{
+    margin-top: 1rem;
+    
+}
 
-// home
 
 .search-main{
     margin: 1rem;
     margin-top: 10rem;
+    margin-left: 3rem;
+    background-color: white;
+    padding: 3rem;
+    border-radius: 2rem;;
+    padding-left: 15rem;
+    width: 65rem; // 왜 이 이상 안되는지?
 }
 .sub-title{
     border-left: $dark solid 2px;
@@ -449,13 +459,56 @@ main .content{
     margin-bottom: 1.5rem;
 }
 .main-box{
-    margin-bottom:2rem;
     border-radius: 1.5rem;
+    padding-bottom:0.4rem;
+    height: auto;
 }
 .book{
     margin:1rem;
     margin-top:1.7rem;
     margin-bottom:1.7rem;
+}
+
+
+//search selected
+.content .settings{
+    margin:0.4rem;
+    font-size: 1.1rem;
+}
+
+.no-padding{
+    padding-left: 0rem;
+}
+.flex{
+    display:flex;
+    align-items: flex-start;
+}
+.filter{
+    width:18rem;
+    padding-left: 1.5rem;
+}
+.filter-item{
+    margin-top: 1.7rem;
+    margin-bottom: 0.4rem;
+}
+.filter-search-button{
+    margin-top:0.5rem;
+    background-color: $dark;
+    color:white;
+}
+.filter{
+    background-color: $bright3;
+    padding:1rem;
+    margin:1rem;
+    border-radius: 1rem;
+}
+.filter-item{
+    padding-left:0.5rem;
+    border-left: 1px solid $bright2;
+}
+
+.main-list{
+    margin-top: 3rem;
 }
 
 
