--- a/css/style.scss
+++ b/css/style.scss
@@ -447,7 +447,7 @@ main .content{
     margin: 1rem;
     margin-top: 10rem;
     margin-left: 3rem;
-    background-color: white;
+    // background-color: white;
     padding: 3rem;
     border-radius: 2rem;;
     padding-left: 15rem;
@@ -521,3 +521,39 @@ main .content{
     // top: 50%;
     // left: 50%;
     // transform: translate(-50%, -50%);
+
+
+
+
+
+    //post
+
+.post-main{
+    margin:1rem;
+    width:50vw;
+}
+.post-main .form-label{
+    width:5rem;
+}
+.buttons{
+
+}
+.custom-button{
+    margin:0.5rem;
+    padding:0.5rem;
+    border: 1px solid $bright;
+    background-color: $bright3;
+    border-radius: 0.5rem;
+}
+.post-book{
+    margin-top: 1rem;
+    padding-top: 0.5rem;
+    border-top: 1px solid black;
+}
+
+
+//post-view
+.post-content{
+    width:55rem;
+    background-color: green;
+}
