--- a/css/style.css
+++ b/css/style.css
@@ -472,6 +472,9 @@ main .content {
 .post-main {
   margin: 1rem;
   width: 50vw;
+  background-color: rgb(211, 230, 255);
+  padding: 1rem;
+  border-radius: 1rem;
 }
 
 .post-main .form-label {
@@ -481,8 +484,7 @@ main .content {
 .custom-button {
   margin: 0.5rem;
   padding: 0.5rem;
-  border: 1px solid rgb(170, 204, 248);
-  background-color: rgb(211, 230, 255);
+  background-color: rgb(228, 205, 255);
   border-radius: 0.5rem;
 }
 
@@ -492,7 +494,67 @@ main .content {
   border-top: 1px solid black;
 }
 
+.post-main .buttons {
+  margin-top: 1rem;
+  padding-bottom: 0.4rem;
+  border-bottom: 1px solid rgb(170, 204, 248);
+}
+
+.post-main .item {
+  margin: 0.4rem;
+}
+
+.margin-right {
+  margin-right: 0.7rem;
+}
+
+.post-main .margin-top {
+  margin-top: 0.4rem;
+}
+
+.post-text {
+  height: 30rem;
+  width: 100%;
+  margin: 0.4rem;
+  margin-left: 0.7rem;
+}
+
 .post-content {
-  width: 55rem;
-  background-color: green;
+  width: 100%;
+  background-color: rgb(255, 255, 229);
+  padding: 0.5rem;
+  border-radius: 0.8rem;
+  margin-top: 0.8rem;
+}
+
+.post-main .detail {
+  background-color: rgb(170, 204, 248);
+  color: white;
+  border-radius: 0.5rem;
+  padding-left: 0.7rem;
+  padding-right: 0.7rem;
+}
+
+.post-main .title {
+  margin: 1rem;
+  font-size: 1.2rem;
+  text-align: left;
+}
+
+.post-photo {
+  width: 40%;
+  height: auto;
+  margin: 1rem;
+}
+
+.review-text {
+  height: 6rem;
+  width: 95%;
+  margin: 0.4rem;
+  margin-left: 0.7rem;
+}
+
+.top-border {
+  border-top: 2px solid rgb(190, 133, 255);
+  padding-top: 1rem;
 }/*# sourceMappingURL=style.css.map */
