--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,7 @@ $bright2: rgb(190, 133, 255);
 $bright3: rgb(211, 230, 255);
 $bright4: rgb(255, 255, 229);
 $bright5: rgb(255, 239, 146);
+$bright6: rgb(228, 205, 255);
 
 $border: rgb(36, 0, 165);
 $dark: rgb(36, 0, 165);
@@ -531,6 +532,9 @@ main .content{
 .post-main{
     margin:1rem;
     width:50vw;
+    background-color: $bright3;
+    padding: 1rem;
+    border-radius: 1rem;
 }
 .post-main .form-label{
     width:5rem;
@@ -541,8 +545,7 @@ main .content{
 .custom-button{
     margin:0.5rem;
     padding:0.5rem;
-    border: 1px solid $bright;
-    background-color: $bright3;
+    background-color: $bright6;
     border-radius: 0.5rem;
 }
 .post-book{
@@ -550,10 +553,64 @@ main .content{
     padding-top: 0.5rem;
     border-top: 1px solid black;
 }
+.post-main .buttons{
+    margin-top: 1rem;
+    padding-bottom: 0.4rem;
+    border-bottom: 1px solid $bright;
+}
 
+.post-main .item{
+    margin:0.4rem;
+}
+
+.margin-right{
+    margin-right: 0.7rem;
+}
+.post-main .margin-top{
+    margin-top: 0.4rem;
+}
+
+.post-text{
+    height:30rem;
+    width:100%; 
+    margin:0.4rem;
+    margin-left: 0.7rem;
+}
 
 //post-view
 .post-content{
-    width:55rem;
-    background-color: green;
+    width:100%;
+    background-color: $bright4;
+    padding: 0.5rem;
+    border-radius: 0.8rem;
+    margin-top: 0.8rem;
+}
+
+.post-main .detail{
+    background-color: $bright;
+    color:white;
+    border-radius: 0.5rem;
+    padding-left:0.7rem;
+    padding-right:0.7rem;
+}
+.post-main .title{
+    margin:1rem;
+    font-size: 1.2rem;
+    text-align: left;
+}
+.post-photo{
+    width:40%;
+    height: auto;
+    margin:1rem;
+}
+//others
+.review-text{
+    height:6rem;
+    width:95%; 
+    margin:0.4rem;
+    margin-left: 0.7rem;
+}
+.top-border{
+    border-top: 2px solid $bright2;
+    padding-top: 1rem;
 }
