--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,19 @@ main .content {
   margin: 0.2rem;
 }
 
+.favor-content{
+  background-color: rgb(255, 255, 229);
+  padding: 0.5rem;
+  border-radius: 1rem;
+  display: flex;
+  margin-bottom: 0.5rem;
+}
+
+.favor-content-info {
+  color: rgb(0, 0, 0);
+  margin: 0.2rem;
+}
+
 .account-logined {
   top: 0;
   right: 0;
